# Atlantic

./: .dockerignore  .gitignore  .tool-versions  Dockerfile.auth  Dockerfile.cosmog  Dockerfile.goose  Dockerfile.inventory  Dockerfile.overtools  Dockerfile.skitty  Dockerfile.test  Makefile  README.md  compose.sh  docker-compose.gen.yaml  docker-compose.k8s.yaml  docker-compose.yaml  go.work  go.work.sum  k8svar  run.sh  skaffold.yaml  var.docker  var.k8s
account/: Makefile  go.mod
auth/: Dockerfile.auth  Makefile  auth_test.go  buf.gen.yaml  go.mod  go.sum
clonek7s/: quickstart.yaml
config/: Caddyfile  Makefile  config.go  example.config.json  go.mod  go.sum  otelcol-config.yml  prometheus.yml
cosmog/: Makefile  README.md  bun.lockb  games.go  go.mod  go.sum  hello.html  index.ts  package.json
dashboard/: Dockerfile.dashboard  Makefile  README.md  app.py  environment.yml  main.py  pyproject.toml
dashboard/helper/: config.py  query.py
dashboard/store/: models.py  product.py  product_category.py  product_comment.py  product_reviews.py
database/: Makefile  gen.buf.yaml  go.mod  go.sum  main.go  registry.go  schema.sql  sqlc.yaml
docs/: Makefile  buf.gen.yaml  docs.go  go.mod
ducklett/: duck.db  go.mod  main.go
ducklett/ducklett/: pyproject.toml  script.ipynb  script.py
ducklett/ducklett/.ipynb_checkpoints/: script-checkpoint.ipynb
inventory/: Makefile  go.mod  go.sum
k8s/: _atlantic.yaml  _config.yaml  atlantic-namespace.yaml  auth-cm0-configmap.yaml  auth-deployment.yaml  auth-horizontalpodautoscaler.yaml  auth-service.yaml  caddy-cm0-configmap.yaml  caddy-deployment.yaml  caddy-service.yaml  goose-cm0-configmap.yaml  goose-migration-cm0-configmap.yaml  goose-migration-pod.yaml  goose-pod.yaml  my-secret-secret.yaml  pg-data-persistentvolumeclaim.yaml  postgres-cm1-configmap.yaml  postgres-deployment.yaml  postgres-service.yaml  skitty-deployment.yaml  skitty-service.yaml  tcpdump-deployment.yaml
orders/: buf.gen.yaml  go.mod  go.sum
torchic/: .gitignore  Dockerfile.torchic  Makefile  classify.py  environment.yml  helper.py  main.py  pyproject.toml  text_generate.py  valid.py
torchic/static/: index.html
(+498 files in other folders)
