[tool.poetry]
name = "ducklett"
version = "0.1.0"
description = ""
authors = ["Hari Krishnan <codeharik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.0.0"
pyarrow = "^17.0.0"
pandas = "^2.2.2"
ruff = "^0.5.7"
sqlalchemy = "^2.0.32"
streamlit = "^1.37.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
