[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Hari Krishnan", email = "codeharik@gmail.com" }
]
dependencies = [
    "streamlit>=1.38.0",
    "pandas>=2.2.2",
    "altair>=5.4.1",
    "duckdb>=1.1.0",
    "sqlalchemy>=2.0.34",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]
