[tool.poetry]
name = "ducklett"
version = "0.1.0"
description = ""
authors = ["Hari Krishnan <codeharik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
duckdb = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
